Add error handler

--- a/src/wrapper/index.css
+++ b/src/wrapper/index.css
@@ -190,3 +190,9 @@
   align-items: center;
   flex-direction: column;
 }
+
+.coefficient-months {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
